test/fail/actor-class-non-shared.mo
actor class C1(f:()->()) {}; // reject: non-shared parameter


